# hri_optitrack

./: CMakeLists.txt  README.md  package.xml
launch/: optitrack_collector.launch
msg/: CreateObject.msg
scripts/: calc_utils.py  optitrack_collector.py
utils/: baza_1.bag  ravnina_tocke.bag  stol_1.bag
