<?xml version="1.0"?>
<package format="2">
  <name>hri_optitrack</name>
  <version>0.1.0</version>
  <description>The description of your package</description>
  
  <maintainer email="filip.zoric@fer.hr">Filip Zoric</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>shape_msgs</depend>
  <depend>moveit_msgs</depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>


